<resources>
  <string name="app_name">IdGoods</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="open">打开</string>
  <string name="close">关闭</string>
  <string name="turn_on_flashlight">打开闪关灯</string>
  <string name="turn_off_flashlight">关闭闪关灯</string>
  <string name="register_get_check_num">获取验证码</string>


  <string name="title_activity_login">LoginActivity</string>
  <string name="title_activity_signup">SignupActivity</string>
  <string name="title_activity_get_check_code">GetCheckCode</string>
  <string name="title_activity_personal_information">PersonalInformationActivity</string>
  <string name="title_activity_change_email">ChangeEmailActivity</string>
  <string name="title_activity_change_address">ChangeAddressActivity</string>
  <string name="title_activity_selecte_pay">SelectePayActivity</string>
  <string name="title_activity_sound_record">SoundRecord</string>

  <string name="state_normal">按住说话</string>
  <string name="state_recording">松开停止</string>
  <string name="state_check">回放录音</string>
  <string name="state_stop">暂停</string>
  <string name="play_date">正在播放 %1$s</string>
  <string name="setting">设置</string>
  <string name="home">首页</string>
  <string name="product">我的产品</string>
  <string name="collect">我的收藏</string>
  <string name="login">登陆</string>
  <string name="finish_register">登记成功\n敬请等待返现</string>
  <string name="finish">完成</string>
  <string name="voice_blessing">语音祝福</string>
  <string name="modify_address">修改地址</string>
  <string name="save_str">保存</string>
  <string name="modify_email">修改邮箱</string>
  <string name="cancle">取消</string>
  <string name="phone_hint">请输入手机号码</string>
  <string name="checkcode_hint">请输入验证码</string>
  <string name="confirm">确认</string>
  <string name="info_person">个人信息</string>
  <string name="name">个人姓名</string>
  <string name="email">邮箱</string>
  <string name="address">地址</string>
  <string name="birthday">生日</string>
  <string name="sex">性别</string>
  <string name="man">男</string>
  <string name="register">注册</string>
  <string name="name_hint">请输入用户名</string>
  <string name="input_password_hint">请输入密码</string>
  <string name="again_input_password_hint">请再次输入密码</string>
  <string name="choose_date">请选择出生日期</string>
  <string name="barcode_hint">请输入二维码</string>
  <string name="input_invite_code">邀请码/可不填</string>
  <string name="input_origin_password">请输原来密码</string>
  <string name="input_new_password">请输入新密码</string>
  <string name="loginout">注销</string>
  <string name="modify_password">更改密码</string>
  <string name="choose_sex">请选择性别</string>
  <string name="certain">确定</string>
  <string name="other">其他</string>
  <string name="woman">女</string>
</resources>
