<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    >
    <TextView
      android:id="@+id/cancel"
      android:background="@drawable/button_bound"
      android:text="@string/cancle"
      tools:ignore="RelativeOverlap"
      style="@style/text_style6"
      />
    <ImageView
      android:id="@+id/checkcode_back"
      android:src="@drawable/ic_navigate_black_24dp"
      style="@style/imageview_style2"
      android:contentDescription="@null"
      />
  </RelativeLayout>
  <Button
    android:id="@+id/btn_getCheckCode"
    style="@style/button_style2"
    android:text="@string/register_get_check_num"
    />
  <com.scau.beyondboy.idgoods.view.ClearEditText
    android:id="@+id/et_phone"
    android:layout_above="@+id/btn_getCheckCode"
    android:drawableLeft="@drawable/loginuserx"
    android:drawableStart="@drawable/loginuserx"
    android:hint="@string/phone_hint"
    android:inputType="phone"
    style="@style/text_style9"
    />
  <com.scau.beyondboy.idgoods.view.ClearEditText
    android:id="@+id/et_checkcode"
    android:layout_below="@+id/btn_getCheckCode"
    android:drawableLeft="@drawable/loginuserx"
    android:drawableStart="@drawable/loginuserx"
    android:hint="@string/checkcode_hint"
    android:inputType="number"
    style="@style/text_style9"
    />
  <Button
    android:id="@+id/confirm"
    android:layout_below="@+id/et_checkcode"
    android:layout_marginTop="50dp"
    android:text="@string/confirm"
    style="@style/button_style2"
    />
</RelativeLayout>
