<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/button_bound"
  android:orientation="vertical"
  >
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    >
    <TextView
      android:id="@+id/cancel"
      android:layout_alignParentBottom="true"
      android:text="@string/cancle"
      android:layout_marginLeft="10dp"
      android:background="@drawable/button_bound"
      android:padding="5dp"
      tools:ignore="RtlHardcoded"
      style="@style/text_style8"
      />
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="25sp"
      android:text="@string/choose_date"
      android:layout_centerHorizontal="true"
      />
    <TextView
      android:id="@+id/comfirm"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_marginRight="10dp"
      android:padding="5dp"
      android:text="@string/confirm"
      android:background="@drawable/button_bound"
      tools:ignore="RelativeOverlap,RtlHardcoded"
      style="@style/text_style8"
      />
  </RelativeLayout>
  <DatePicker
    android:id="@+id/datePicker"
    android:layout_marginTop="15dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:calendarViewShown="false"
    />
</LinearLayout>